# EAI-Project-LeRobot

./: .gitignore  .venv  DATA_COLLECTION_GUIDE.md  README.md  debug_actor_structure.py  debug_ik.py  debug_poses.py  debug_reach_pose.py  pyproject.toml  requirements.txt
assets/SO101/: gripper_only.urdf  so101.srdf  so101.urdf
configs/: train.yaml
configs/policy/: diffusion.yaml
docs/midterm_report/: midterm_report.tex
reference-scripts/: .gitignore  README.md  calibration.py  distort.py  dummy_eval.py  front_camera.py  requirements.txt  robot.py
reference-scripts/robots/so101_follower/: eai-robot-bi-follower_left.json  eai-robot-bi-follower_right.json  eai-robot-left-follower-arm.json
scripts/: collect_data.py  collect_data_fsm.py  dump_pdf.py  eval.py  extract_pdf.py  extract_pdf_content.py  reward_functions.py  sim_env_demo.py  simulation_setup.py  simulation_setup.py.bak  train.py  visualize_training.py
src/lerobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/lerobot/agents/robots/so101/: so_101.py
src/lerobot/common/: camera.py  dataset.py  kinematics.py
src/lerobot/common/motion_planning/base_motionplanner/: motionplanner.py  utils.py
src/lerobot/envs/: gym_env.py  sapien_env.py
src/lerobot/policy/: diffusion.py  fsm_policy.py  scripted.py  task_planner.py
src/lerobot/real/: robot.py
tools/: check_link_collision_visual.py  check_urdf_mesh_files.py  comment_ply_mesh_in_urdf.py  convert_videos.sh  fix_urdf_mesh_paths.py  visualize_gripper_pose.py
tools/calibration/: undistort.py
tools/web_viewer/: viewer.py
(+2 files in other folders)
