[project]
name = "lerobot"
version = "0.1.0"
description = "Embodied AI Project using LeRobot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sapien",
    "mplib",
    "tyro",
    "numpy",
    "opencv-python",
    "scipy",
    "pillow",
    "gymnasium",
    "h5py",
    "torch",
    "torchvision",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
